<resources>
    <string name="app_name">dschaphorst_P1</string>
    <string name="logo_desc">GreenFlag Logo</string>
    <string name="check_desc">Green Checkmark</string>
    <string name="mainText1">GreenFlag customers can\n create an account to access:</string>
    <string name="mainText2">Car health update</string>
    <string name="mainText3">Request a rescue online</string>
    <string name="mainText4">Policy information</string>
    <string name="mainBtn1">Create Account</string>
    <string name="etEmailHint">username@email.com</string>
    <string name="etPasswordHint">See Requirements Bellow</string>
    <string name="etConfirmHint">Confirm Password</string>
    <string name="tvRequirementsText">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lowercase letter. You can use special characters.</string>
    <string name="tvConfirmText">Confirm Password</string>
    <string name="tvEmailText">Email Address</string>
    <string name="tvPasswordText">Create Password</string>
    <string name="tvEmailERROR_text"> </string>
    <string name="tvPasswordERROR_text"> </string>
    <string name="pass_invalid">Password is invalid. See requirements bellow.</string>
    <string name="pass_mismatch">Passwords do not match.</string>
    <string name="email_invalid">Invalid Email Address.</string>
    <string name="email_exists">Email address already exists.</string>
    <string name="create_btn_txt">Create Account</string>
    <string name="create_title">Create an Account</string>
    <string name="back_button_desc">Back Button</string>

</resources>